# cpmonad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  cpmonad.cabal  flake.nix  fourmolu.yaml  test.cpp
app/: Main.hs
lib/: Cpmonad.hs  Printer.hs
lib/Cpmonad/: Gen.hs  Graph.hs  Misc.hs  Printer.hs
scratchpad/: scratchpad.cabal
scratchpad/app/: Main.hs
src/: Cpmonad.hs  Main.hs  Printer.hs
test/: PrinterSpec.hs  Spec.hs
test/Cpmonad/: GenSpec.hs  PrinterSpec.hs  TestUtil.hs
