cabal-version:      3.0

name:               cpmonad
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             drdilyor

build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:

common ghc
    ghc-options: -Wall -Wno-name-shadowing
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DeriveAnyClass
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedRecordDot
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
        DeriveAnyClass
        OverloadedStrings
        TypeFamilies

    default-language: GHC2021

common dependencies
    
    build-depends:    base ^>=4.18.2.1
                    , bytestring
                    , containers
                    , deepseq
                    , vector
                    , vector-algorithms
                    , random
                    , optparse-applicative
                    , free
                    , transformers
                    , mtl
                    , microlens
                    , microlens-th
                    , directory
                    , attoparsec
                    , data-default
                    , process
                    , temporary


library
    import:           ghc, dependencies

    exposed-modules: Cpmonad, Cpmonad.Gen, Cpmonad.Misc, Cpmonad.Printer
    hs-source-dirs:   lib

executable exe
    import: ghc, dependencies
    main-is: Main.hs
    build-depends: cpmonad
    hs-source-dirs: app

test-suite test
    import: ghc, dependencies
    ghc-options: -Wno-missing-signatures
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: Cpmonad.PrinterSpec

    build-depends:
          cpmonad
        , hspec
        , hspec-contrib
        , hspec-discover
        , QuickCheck
        , HUnit

    hs-source-dirs: test
