cabal-version:      3.0

name:               cpmonad
version:            0.1.0.0

category:           Tools
synopsis:           Competitive programming problemsetting toolchain
description:
    Cpmonad (a typo of Comonad) is a set of tools for setting competitive programming
    problems. It features easy bidirectional parser/serializer, set of generators,
    and tools to automatically run the solutions on all tests. There is no need to
    write checkers for input and output formats.

    This is very much an experiment. It only supports Batch problems, and doesn't
    yet support exporting to polygon or other formats.

license:            MIT
license-file:       LICENSE
author:             drdilyor
maintainer:         drdilyor <drdilyor@outlook.com>

homepage:           https://github.com/drdilyor/cpmonad
bug-reports:        https://github.com/drdilyor/cpmonad/issues

build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:

source-repository head
  type: git
  location: https://github.com/drdilyor/cpmonad.git

common ghc
    ghc-options: -Wall -Wno-name-shadowing
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DeriveAnyClass
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedRecordDot
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
        DeriveAnyClass
        OverloadedStrings
        TypeFamilies

    default-language: GHC2021

common dependencies

-- TODO: weaken the ranges
    build-depends:
        base,
        bytestring,
        deepseq,
        containers,
        data-default,
        directory,
        mtl,
        transformers,
        lens,
        generic-lens,
        microlens,
        microlens-th,
        optparse-applicative,
        process,
        random,
        temporary,
        vector,
        vector-algorithms,

library
    import:           ghc, dependencies
    exposed-modules:
        Cpmonad,
        Cpmonad.Gen,
        Cpmonad.Printer,
        Cpmonad.Misc,
    hs-source-dirs:   lib

test-suite test
    import: ghc, dependencies
    ghc-options: -Wno-missing-signatures
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules: Cpmonad.PrinterSpec

    build-depends:
        cpmonad,
        hspec,
        hspec-contrib,
        QuickCheck,
        HUnit,

    hs-source-dirs: test
