cabal-version:      3.0

name:               scratchpad
version:            0.1.0.0

build-type:         Simple

common ghc
    ghc-options: -Wall -Wno-name-shadowing
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DeriveAnyClass
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        OverloadedRecordDot
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        ViewPatterns
        DeriveAnyClass
        OverloadedStrings
        TypeFamilies

    default-language: GHC2021

executable scratchpad
    import: ghc
    main-is: Main.hs
    build-depends:
        base,
        bytestring,
        cpmonad,
        containers,
        data-default,
        deepseq,
        mtl,
        transformers,
        lens,
        generic-lens,
        random,
        vector,
        vector-algorithms
    hs-source-dirs: app
    ghc-options: -threaded
